--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -1,9 +1,9 @@
 [options]
-#allow_bold = true
+allow_bold = true
 #audible_bell = false
 #clickable_url = true
 #dynamic_title = true
-font = Inconsolata Nerd Font Mono medium 12
+font = InconsolataLGC Nerd Font 11
 #fullscreen = true
 #geometry = 640x480
 #icon_name = terminal
@@ -37,52 +37,22 @@ scrollback_lines = 10000
 
 # "off", "left" or "right"
 #scrollbar = off
-
 [colors]
-# Base16 Default Dark
-# Author: Chris Kempson (http://chriskempson.com)
-
-foreground      = #d8d8d8
-foreground_bold = #e8e8e8
-cursor          = #e8e8e8
-background      = #181818
-
-# 16 color space
-
-# Black, Gray, Silver, White
-color0  = #181818
-color8  = #585858
-color7  = #d8d8d8
-color15 = #f8f8f8
-
-# Red
-color1  = #ab4642
-color9  = #ab4642
-
-# Green
-color2  = #a1b56c
-color10 = #a1b56c
-
-# Yellow
-color3  = #f7ca88
-color11 = #f7ca88
-
-# Blue
-color4  = #7cafc2
-color12 = #7cafc2
-
-# Purple
-color5  = #ba8baf
-color13 = #ba8baf
-
-# Teal
-color6  = #86c1b9
-color14 = #86c1b9
-
-# Extra colors
-color16 = #dc9656
-color17 = #a16946
-color18 = #282828
-color19 = #383838
-color20 = #b8b8b8
-color21 = #e8e8e8
+foreground = #ebdbb2
+background = #282828
+color0 = #282828
+color1 = #cc241d
+color2 = #98971a
+color3 = #d79921
+color4 = #458588
+color5 = #b16286
+color6 = #689d6a
+color7 = #a89984
+color8 = #928374
+color9 = #fb4934
+color10 = #b8bb26
+color11 = #fabd2f
+color12 = #83a598
+color13 = #d3869b
+color14 = #8ec07c
+color15 = #ebdbb2
