--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -225,9 +225,10 @@ bindsym $mod+r mode "resize"
 bar {
     position top
     colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
+        statusline #ebdbb2
+        background #282828
+		focused_workspace    #458588 #458588 #282828
+        inactive_workspace   #83a598 #83a598 #282828
     }
 }
 
