--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -30,7 +30,9 @@ hide_edge_borders both
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in __DATADIR__/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg ~/ArchWallpaper1920x1080.png fill
+output DP-1 position 0,0
+output DVI-I-1 position 1920,0 transform 90
 #
 # Example configuration:
 #
@@ -65,7 +67,9 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
-input * xkb_numlock enabled
+input * {
+	xkb_numlock enabled
+}
 
 ### Key bindings
 #
@@ -223,12 +227,13 @@ bindsym $mod+r mode "resize"
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
+	font Fantasque Sans Nerd Font 9
     position top
     colors {
         statusline #ebdbb2
-        background #282828
-		focused_workspace    #458588 #458588 #282828
-        inactive_workspace   #83a598 #83a598 #282828
+        background #458588
+		focused_workspace    #689d6a #689d6a #282828
+        inactive_workspace   #689d6a #83a598 #282828
     }
 }
 
